--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-#inventory      = /etc/ansible/hosts
+inventory      = /ansible-B16/hosts
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
@@ -133,7 +133,7 @@
 
 # if set, always use this private key file for authentication, same as
 # if passing --private-key to ansible or ansible-playbook
-#private_key_file = /path/to/file
+private_key_file = /root/northv.pem
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
