--- a/Playbooks/variable.yaml
+++ b/Playbooks/variable.yaml
@@ -1,6 +1,7 @@
 - name: playbook for debug
   hosts: all
-  URL: "cloudblitz"
+  vars:
+    URL: "cloudblitz"
   tasks:
     - name: print hello world
       debug:
