--- a/Playbooks/webserver.yaml
+++ b/Playbooks/webserver.yaml
@@ -13,7 +13,7 @@
          name: httpd
          enabled: true
 
-    - name: deploy websites
-      copy:
-        src: ./index.html
-        dest: /var/www/html/index.html
+   # - name: deploy websites
+    #  copy:
+     #   src: ./index.html
+      #  dest: /var/www/html/index.html
