--- a/roles/webserver/tasks/main.yaml
+++ b/roles/webserver/tasks/main.yaml
@@ -12,7 +12,7 @@
 - name: Deploy Website
   copy:
     src: ./index.html
-    dest: /var/www/html/index.html
+    dest: /var/www/html/
 
 #- name: Deploy Website content
  # copy:
